--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,13 @@ build-backend = "setuptools.build_meta"
 name = "codesum"
 version = "0.1.1" # Incremented version
 authors = [
-  { name="Your Name", email="your.email@example.com" },
+  { name="Sam G" },
 ]
 description = "Interactive code summarizer using AI and TUI"
 readme = "README.md"
 requires-python = ">=3.8"
-license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Environment :: Console :: Curses",
     "Topic :: Software Development :: Documentation",
